[project]
name = "task-tracker"
version = "0.1.0"
description = "Task tracker cli app"
readme = "README.md"
requires-python = ">=3.11"


[project.scripts]
task-tracker = "task_tracker:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["task_tracker"]

[tool.uv]
# read dependencies from *project*

[tool.uv.dev-dependencies]
pytest = "*"
