[project]
name = "tasker"
version = "0.1.0"
description = "Task tracker cli app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer"]

[project.scripts]
tasker = "tasker:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["tasker"]
